# carnivores-herbivores

./: carnivores-herbivores.cabal
src/: Lib.hs  Neural.hs  World.hs
